--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -44,10 +44,6 @@ body {
 }
 
 .navbar-right{
-    .system-icons{
-        width: 20px; 
-        height: 20px;
-    }
     .loader-div{
         text-align: center;
         position: absolute;
@@ -255,5 +251,6 @@ footer{
 .btn{
     background-color: @theme-color;
     border-color: @theme-color; 
+    /*margin-left: 15px;*/
 }
 
