settings - update profile

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -268,3 +268,29 @@ footer{
     border-color: @theme-color; 
 }
 
+.settings-list{
+    background-color: #e7e7e7;
+    padding: 10px;
+    .settings-tile{
+        background-color: #fff;
+        padding: 1px;
+        padding-left: 4px;
+        border-radius: 6px;
+        border: solid 1px black;
+    }
+    .updateform{
+        border: solid 1px black;
+        background-color: #fff;
+        border-radius:6px;
+        padding:10px;
+        display: none;
+        #output_msg{
+            text-align: center;
+            height: auto;
+            width: 100%;
+            background-color: #10d510;
+            color: #fff;
+            border-radius: 10px;
+        }
+    }
+}
